k8s/premise/win/hyperv/cilium-netpol.yaml
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: "lockdown"
spec:
  description: "Block all the traffic originating from outside of the cluster"
  endpointSelector:
    matchLabels:
      app: httpbin
  ingress:
  - fromEntities:
    - cluster
  - fromCIDR:
    - 10.0.0.1/32
# ---
# apiVersion: "cilium.io/v2"
# kind: CiliumNetworkPolicy
# metadata:
#   name: "allow-external-cidr"
#   namespace: default
# spec:
#   description: "Block all the traffic originating from outside of the cluster"
#   endpointSelector: {}
#   ingress:
  
# ---
# apiVersion: "cilium.io/v2"
# kind: CiliumClusterwideNetworkPolicy
# metadata:
#   name: "expose"
# spec:
#   description: "Block all the traffic originating from outside of the cluster"
#   endpointSelector: {}
#   ingress:
#   - fromEntities:
#     - world
