k8s/premise/win/hyperv/cnetpol.yaml
---
apiVersion: projectcalico.org/v3
kind: GlobalNetworkPolicy
metadata:
  name: default-deny
spec:
  selector:  all()
  types:
  - Ingress
